--- a/MLDP_data_cleaning.ipynb
+++ b/MLDP_data_cleaning.ipynb
@@ -101,13 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "cust_services = [\"PhoneService\", \"MultipleLines\", \"InternetService\", \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\", \"TechSupport\", \"StreamingTV\", \"StreamingMovies\"]\n",
     "cust_account = [\"tenure\", \"Contract\", \"PaymentMethod\", \"PaperlessBilling\", \"MonthlyCharges\", \"TotalCharges\"]\n",
-    "categorical_features = [\"Contract\", \"PaymentMethod\", \"PaperlessBilling\",\"gender\", \"Partner\", \"Dependents\", \"SeniorCitizen\",\"PhoneService\", \"MultipleLines\", \"InternetService\", \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\", \"TechSupport\", \"StreamingTV\", \"StreamingMovies\"]"
+    "categorical_features = [\"Contract\", \"PaymentMethod\", \"PaperlessBilling\",\"gender\", \"Partner\", \"Dependents\", \"SeniorCitizen\",\"PhoneService\", \"MultipleLines\", \"InternetService\", \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\", \"TechSupport\", \"StreamingTV\", \"StreamingMovies\"]\n",
+    "num_features = [\"tenure\", 'MonthlyCharges', 'TotalCharges']"
    ]
   },
   {
@@ -1037,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,12 +1054,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelling_df['Churn'].replace(to_replace='Churned', value=1, inplace=True)\n",
     "modelling_df['Churn'].replace(to_replace='Not Churned',  value=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scaling numerical data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scale the data to prevent introducing bias to certain features with higher values and set numerical features on the same scale<br>\n",
+    "Since machine learning algorithms used later like logistic regression uses gradient descent, which iteratively calculates distance between datapoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler= StandardScaler()\n",
+    "#TODO decide whether i should scale for certain algorithms, research on the algorithms if they are sensitive to the scale of data\n",
+    "\n",
+    "tree_df = modelling_df.copy(deep=True) # tree_df will be used for tree based algorithms\n",
+    "modelling_df[num_features] = scaler.fit_transform(modelling_df[num_features])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tree_df will not be scaled since tree-based algorithms are insensitive to the scale of features"
    ]
   },
   {
@@ -1071,237 +1108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tenure</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "      <th>Churn</th>\n",
-       "      <th>Customer Services</th>\n",
-       "      <th>SeniorCitizen_Not Senior</th>\n",
-       "      <th>SeniorCitizen_Senior</th>\n",
-       "      <th>Partner_No</th>\n",
-       "      <th>Partner_Yes</th>\n",
-       "      <th>Dependents_No</th>\n",
-       "      <th>...</th>\n",
-       "      <th>StreamingMovies_Yes</th>\n",
-       "      <th>Contract_Month-to-month</th>\n",
-       "      <th>Contract_One year</th>\n",
-       "      <th>Contract_Two year</th>\n",
-       "      <th>PaperlessBilling_No</th>\n",
-       "      <th>PaperlessBilling_Yes</th>\n",
-       "      <th>PaymentMethod_Bank transfer (automatic)</th>\n",
-       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
-       "      <th>PaymentMethod_Electronic check</th>\n",
-       "      <th>PaymentMethod_Mailed check</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>29.85</td>\n",
-       "      <td>29.85</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>34</td>\n",
-       "      <td>56.95</td>\n",
-       "      <td>1889.50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>53.85</td>\n",
-       "      <td>108.15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45</td>\n",
-       "      <td>42.30</td>\n",
-       "      <td>1840.75</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>70.70</td>\n",
-       "      <td>151.65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   tenure  MonthlyCharges  TotalCharges  Churn  Customer Services  \\\n",
-       "0       1           29.85         29.85      0                  2   \n",
-       "1      34           56.95       1889.50      0                  4   \n",
-       "2       2           53.85        108.15      1                  4   \n",
-       "3      45           42.30       1840.75      0                  4   \n",
-       "4       2           70.70        151.65      1                  2   \n",
-       "\n",
-       "   SeniorCitizen_Not Senior  SeniorCitizen_Senior  Partner_No  Partner_Yes  \\\n",
-       "0                         1                     0           0            1   \n",
-       "1                         1                     0           1            0   \n",
-       "2                         1                     0           1            0   \n",
-       "3                         1                     0           1            0   \n",
-       "4                         1                     0           1            0   \n",
-       "\n",
-       "   Dependents_No  ...  StreamingMovies_Yes  Contract_Month-to-month  \\\n",
-       "0              1  ...                    0                        1   \n",
-       "1              1  ...                    0                        0   \n",
-       "2              1  ...                    0                        1   \n",
-       "3              1  ...                    0                        0   \n",
-       "4              1  ...                    0                        1   \n",
-       "\n",
-       "   Contract_One year  Contract_Two year  PaperlessBilling_No  \\\n",
-       "0                  0                  0                    0   \n",
-       "1                  1                  0                    1   \n",
-       "2                  0                  0                    0   \n",
-       "3                  1                  0                    1   \n",
-       "4                  0                  0                    0   \n",
-       "\n",
-       "   PaperlessBilling_Yes  PaymentMethod_Bank transfer (automatic)  \\\n",
-       "0                     1                                        0   \n",
-       "1                     0                                        0   \n",
-       "2                     1                                        0   \n",
-       "3                     0                                        1   \n",
-       "4                     1                                        0   \n",
-       "\n",
-       "   PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
-       "0                                      0                               1   \n",
-       "1                                      0                               0   \n",
-       "2                                      0                               0   \n",
-       "3                                      0                               0   \n",
-       "4                                      0                               1   \n",
-       "\n",
-       "   PaymentMethod_Mailed check  \n",
-       "0                           0  \n",
-       "1                           1  \n",
-       "2                           1  \n",
-       "3                           0  \n",
-       "4                           0  \n",
-       "\n",
-       "[5 rows x 37 columns]"
-      ]
-     },
-     "execution_count": 275,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelling_df = pd.get_dummies(modelling_df)\n",
     "modelling_df.head()"
@@ -1398,7 +1207,7 @@
    "source": [
     "y = modelling_df[\"Churn\"].to_numpy()\n",
     "X = modelling_df.drop([\"Churn\"], axis=1,inplace=False).to_numpy()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42, stratify=y)"
    ]
   },
   {
@@ -1763,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1581,7 @@
        "0.7587677725118483"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
